--- a/src/app/modules/pages/post_details/PostDetails.component.css
+++ b/src/app/modules/pages/post_details/PostDetails.component.css
@@ -18,13 +18,6 @@
 	margin-right: auto;
 }
 
-.tabs {
-	padding: auto;
-	display: flex;
-	justify-content: center;
-	column-gap: 3%;
-}
-
 .edit-button:hover {
 	color: salmon;
 	cursor: pointer;
@@ -32,6 +25,8 @@
 
 .remove-button{
   font-size: 20px;
+  float: right;
+  margin-right: 20px;
 }
 
 .remove-button:hover{
@@ -97,7 +92,7 @@
 
 .edit-button {
 	font-size: 20px;
-	margin-left: 220px;
+  float: right;
 }
 
 .removeComment {
