--- a/src/app/modules/pages/about_us/AboutUs.component.css
+++ b/src/app/modules/pages/about_us/AboutUs.component.css
@@ -33,10 +33,15 @@
 }
 
 .description {
-  text-align: left;
+  text-align: center;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2vw;
+}
+
+.instagram{
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .bigContainer {
