Remove deleted posts from favorites

--- a/src/app/modules/pages/about_us/AboutUs.component.html
+++ b/src/app/modules/pages/about_us/AboutUs.component.html
@@ -56,10 +56,10 @@
         <a href="mailto:info@amimalive.com">Email: info@amimalive.com</a>
       </p>
       <p>
-        <a href="https://www.instagram.com/amima.ca/">Instagram</a>
+        <a href="https://www.instagram.com/amima_live/">Instagram</a>
       </p>
       <p>
-        <a href="https://www.facebook.com/profile.php?id=100070058887555">Facebook </a>
+        <a href="https://www.facebook.com/profile.php?id=100070058887555">Facebook</a>
       </p>
     <p>
   </div>
