fixed the contact us icons

--- a/src/app/modules/pages/about_us/AboutUs.component.html
+++ b/src/app/modules/pages/about_us/AboutUs.component.html
@@ -1,19 +1,19 @@
 <div>
   <div class="topBanner">
-      <img class="table" src="assets/stock_table.jpg">
+      <img alt= "banner" class="table" src="assets/stock_table.jpg">
     <h3 class="title">About Us</h3>
   </div>
   <h4 class="subTitle">What is Amima</h4>
   <div class="descBox">
-    <h1 class="description">
+    <h3 class="description">
       Amima is a community dedicated for people to share online shopping experiences and product reviews.
       It is a platform that allows you to discover current popular trending products
       and browse through product reviews from other people.
-    </h1>
+    </h3>
   </div>
   <div class="bigContainer">
     <div class="smallContainer">
-      <img class="pic" src="assets/wheel_01.jpg">
+      <img alt="about us picture" class="pic" src="assets/wheel_01.jpg">
       <h1 class="header">01
         <br>Product Review
       </h1>
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="smallContainer">
-      <img class="pic" src="assets/cloths_02.jpg">
+      <img alt="description" class="pic" src="assets/cloths_02.jpg">
       <h1 class="header">02
         <br>Community
       </h1>
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div class="smallContainer">
-      <img class="pic" src="assets/makeup_03.jpg">
+      <img alt="content inspiration" class="pic" src="assets/makeup_03.jpg">
       <h1 class="header">03
         <br>Content Inspiration
       </h1>
