--- a/src/app/modules/pages/about_us/AboutUs.component.css
+++ b/src/app/modules/pages/about_us/AboutUs.component.css
@@ -36,12 +36,21 @@
   text-align: center;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 2vw;
+
 }
 
 .instagram{
   margin-left: 20px;
   margin-right: 20px;
+  font-size: 40px;
+}
+
+.facebook{
+  font-size: 40px;
+}
+
+.email{
+  font-size: 40px;
 }
 
 .bigContainer {
