--- a/src/app/modules/pages/edit_profile/EditProfile.component.html
+++ b/src/app/modules/pages/edit_profile/EditProfile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="edit-profile">
-        <img [src]="imgUrl" width="100%" height="100%">
+        <img alt = "edit profile" [src]="imgUrl" width="100%" height="100%">
 
         <div class="image-upload">
             <input type="file" id="file" name="image" (change)="uploadImage($event)" >
