Add comma as separator

--- a/src/app/modules/elements/hashtag_bar/HashtagBar.component.html
+++ b/src/app/modules/elements/hashtag_bar/HashtagBar.component.html
@@ -3,7 +3,7 @@
                 theme="bootstrap"
                 [editable]="true"
                 dragZone="1"
-                [separatorKeyCodes]="[32]"
+                [separatorKeyCodes]="[32, 44]"
                 (onRemove)="emitter()"
                 (onTextChange)="emitter()"
                 (onAdd)="emitter()">
