--- a/src/app/modules/pages/create_post/CreatePost.component.css
+++ b/src/app/modules/pages/create_post/CreatePost.component.css
@@ -62,3 +62,29 @@
   color:rgb(255,36,66);
   cursor: pointer;
 }
+
+.selectContainer {
+  border-radius: 21px;
+  display: inline-block;
+  overflow: hidden;
+  background: white;
+  border: 1px solid black;
+}
+
+.selectOption {
+  width: 130px;
+  height: 35px;
+  border: 0px;
+  outline: none;
+  text-indent: 10%;
+  margin-right: 10px;
+}
+
+.selectContainer:hover {
+  border: 1px solid rgb(255,36,66);
+}
+.selectOption:hover{
+  border-color:rgb(255,36,66);
+  color: rgb(255,36,66);
+  cursor: pointer;
+}
