--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -14,6 +14,22 @@
         <ImageUploader (changeEvent)="updateImages($event)" [images]="images"></ImageUploader>
       </div>
 
+      <div class="sectionContainer">
+        <div class="selectContainer">
+
+          <select class="selectOption" name="category">
+            <option value="" disabled selected>Topic</option>
+            <option value="Fashion">Fashion</option>
+            <option value="Food">Food</option>
+            <option value="Lifestyle">Lifestyle</option>
+            <option value="Technology">Technology</option>
+            <option value="University">University</option>
+            <option value="For You">For You</option>
+          </select>
+
+        </div>
+      </div>
+
       <div class="sectionContainer col-12 col-sm-12 col-md-8 col-lg-8">
         <input maxlength="150" class="revTitleTextBox" placeholder="Your Title goes here..." [(ngModel)]="post.title">
       </div>
