Added filter buttons

--- a/src/app/modules/elements/filter/filter.component.html
+++ b/src/app/modules/elements/filter/filter.component.html
@@ -1,5 +1,26 @@
-<div class="container">
-    <div class="filterButton">
-        
-    </div>
-</div>
+<ul class="list">
+    <li>
+        <input type="radio" id="foryou" name="category" value="For You" checked="checked" />
+        <label for="foryou">For You</label>
+    </li>
+    <li>
+        <input type="radio" id="food" name="category" value="food"/>
+        <label for="food">Food</label>
+    </li>
+    <li>
+        <input type="radio" id="fashion" name="category" value="fashion"/>
+        <label for="fashion">Fashion</label>
+    </li>      
+    <li>
+        <input type="radio" id="lifestyle" name="category" value="Lifestyle"/>
+        <label for="lifestyle">Lifestyle</label>
+    </li>   
+    <li>
+        <input type="radio" id="technology" name="category" value="Technology"/>
+        <label for="technology">Technology</label>
+    </li>   
+    <li>
+        <input type="radio" id="university" name="category" value="University"/>
+        <label for="university">University</label>
+    </li>   
+</ul>
