--- a/src/app/modules/elements/filter/filter.component.css
+++ b/src/app/modules/elements/filter/filter.component.css
@@ -1,16 +1,34 @@
-.container
-{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    float: left;
-    padding: 0;
+.list {
+    list-style-type:none;
+    display: inline-flexbox;
 }
 
-.filterButton
-{
-    width: 20px;
-    background: white;
-    border-radius: 15px;
-    transition: 0.2s;
+.list li {
+   display: inline-block;
+   border-radius: 21px;
+   overflow: hidden;
+   background: white;
+   border: 1px solid rgb(120, 110, 110);
+   margin: 3px;
+   padding-right: 11px;
+}
+
+.list label{
+   color: rgb(120, 110, 110);
+}
+
+.list input[type="radio"] {
+   opacity:0;
+   z-index:100;
+}
+
+.list input[type="radio"]:checked + label {
+   background-color: rgb(255,36,66);
+   color: white;
+}
+
+.list li:hover {
+   
+   color: rgb(255,36,66);
+   cursor: pointer;
 }
