--- a/src/app/modules/elements/filter/filter.component.html
+++ b/src/app/modules/elements/filter/filter.component.html
@@ -1,26 +1,26 @@
 <ul class="list">
     <li>
         <input type="radio" id="foryou" name="category" value="For You" checked="checked" />
-        <label for="foryou">For You</label>
+        <label for="foryou"><span>For You</span></label>
     </li>
     <li>
         <input type="radio" id="food" name="category" value="food"/>
-        <label for="food">Food</label>
+        <label for="food"><span>Food</span></label>
     </li>
     <li>
         <input type="radio" id="fashion" name="category" value="fashion"/>
-        <label for="fashion">Fashion</label>
+        <label for="fashion"><span>Fashion</span></label>
     </li>      
     <li>
         <input type="radio" id="lifestyle" name="category" value="Lifestyle"/>
-        <label for="lifestyle">Lifestyle</label>
+        <label for="lifestyle"><span>Lifestyle</span></label>
     </li>   
     <li>
         <input type="radio" id="technology" name="category" value="Technology"/>
-        <label for="technology">Technology</label>
+        <label for="technology"><span>Technology</span></label>
     </li>   
     <li>
         <input type="radio" id="university" name="category" value="University"/>
-        <label for="university">University</label>
+        <label for="university"><span>University</span></label>
     </li>   
 </ul>
