Fixed the category dropdown in edit post mode

--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -16,7 +16,7 @@
 
       <div class="sectionContainer">
         <div class="selectContainer">
-          <select class="selectOption" name="category" [(ngModel)]="category">
+          <select class="selectOption" name="category" [(ngModel)]="post.category">
             <option [value]="it_category" *ngFor="let it_category of categories">{{it_category}}</option>
           </select>
         </div>
