Linking newestPosts API for categories with frontend

--- a/src/app/modules/elements/filter/filter.component.html
+++ b/src/app/modules/elements/filter/filter.component.html
@@ -1,26 +1,26 @@
 <ul class="list">
     <li>
-        <input type="radio" id="foryou" name="category" value="For You" checked="checked"/>
+        <input type="radio" id="foryou" name="category" value="For You" checked="checked" (click)="category()"/>
         <label for="foryou"><span>For You</span></label>
     </li>
     <li>
-        <input type="radio" id="food" name="category" value="food"/>
+        <input type="radio" id="food" name="category" value="food" (click)="category()"/>
         <label for="food"><span>Food</span></label>
     </li>
     <li>
-        <input type="radio" id="fashion" name="category" value="fashion"/>
+        <input type="radio" id="fashion" name="category" value="fashion" (click)="category()"/>
         <label for="fashion"><span>Fashion</span></label>
     </li>      
     <li>
-        <input type="radio" id="lifestyle" name="category" value="Lifestyle"/>
+        <input type="radio" id="lifestyle" name="category" value="Lifestyle" (click)="category()"/>
         <label for="lifestyle"><span>Lifestyle</span></label>
     </li>   
     <li>
-        <input type="radio" id="technology" name="category" value="Technology"/>
+        <input type="radio" id="technology" name="category" value="Technology" (click)="category()"/>
         <label for="technology"><span>Technology</span></label>
     </li>   
     <li>
-        <input type="radio" id="university" name="category" value="University"/>
+        <input type="radio" id="university" name="category" value="University" (click)="category()"/>
         <label for="university"><span>University</span></label>
     </li>   
 </ul>
