Fixed the category filter buttons

--- a/src/app/modules/elements/filter/filter.component.html
+++ b/src/app/modules/elements/filter/filter.component.html
@@ -1,26 +1,26 @@
 <ul class="list">
     <li>
-        <input type="radio" id="foryou" name="category" value="For You" checked="checked" (click)="category()"/>
+        <input type="radio" id="foryou" name="category" value="For You" checked="checked" (click)="getCategory('For You')"/>
         <label for="foryou"><span>For You</span></label>
     </li>
     <li>
-        <input type="radio" id="food" name="category" value="food" (click)="category()"/>
+        <input type="radio" id="food" name="category" value="Food" (click)="getCategory('Food')"/>
         <label for="food"><span>Food</span></label>
     </li>
     <li>
-        <input type="radio" id="fashion" name="category" value="fashion" (click)="category()"/>
+        <input type="radio" id="fashion" name="category" value="Fashion" (click)="getCategory('Fashion')"/>
         <label for="fashion"><span>Fashion</span></label>
     </li>      
     <li>
-        <input type="radio" id="lifestyle" name="category" value="Lifestyle" (click)="category()"/>
+        <input type="radio" id="lifestyle" name="category" value="Lifestyle" (click)="getCategory('Lifestyle')"/>
         <label for="lifestyle"><span>Lifestyle</span></label>
     </li>   
     <li>
-        <input type="radio" id="technology" name="category" value="Technology" (click)="category()"/>
+        <input type="radio" id="technology" name="category" value="Technology" (click)="getCategory('Technology')"/>
         <label for="technology"><span>Technology</span></label>
     </li>   
     <li>
-        <input type="radio" id="university" name="category" value="University" (click)="category()"/>
+        <input type="radio" id="university" name="category" value="University" (click)="getCategory('University')"/>
         <label for="university"><span>University</span></label>
     </li>   
 </ul>
