Added vertical line and changed the button colour

--- a/src/app/modules/elements/filter/filter.component.html
+++ b/src/app/modules/elements/filter/filter.component.html
@@ -3,6 +3,7 @@
         <input type="radio" id="foryou" name="category" value="For You" checked="checked" (click)="getCategory('For You')"/>
         <label for="foryou"><span>For You</span></label>
     </li>
+    <span class="verticalLine">|</span>
     <li>
         <input type="radio" id="food" name="category" value="Food" (click)="getCategory('Food')"/>
         <label for="food"><span>Food</span></label>
