--- a/src/app/modules/elements/filter/filter.component.css
+++ b/src/app/modules/elements/filter/filter.component.css
@@ -1,36 +1,43 @@
 .list {
-    list-style-type:none;
-    display: inline-flexbox;
-    user-select: none;
-    padding: 0%;
+   list-style-type:none;
+   display: inline-flexbox;
+   user-select: none;
+   padding: 0%;
 }
 
 .list li {
-   display: inline-block;
-   margin: 3px;
+  display: inline-block;
+  margin: 3px;
 }
 
 .list input[type="radio"] {
-   display: none;
+  display: none;
 }
 
 .list input[type="radio"]:checked + label > span {
-   background-color: rgb(255,36,66);
-   color: white;
-   border:none;
+  background-color: #3484ec;
+  color: white;
+  border:none;
 }
 
-.list span {
-   display: inline-flex;
-   padding: 5px;
-   border: 1px solid black;
-   border-radius: 21px;
-   color: black;
+.list li > label > span {
+  display: inline-flex;
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 21px;
+  color: black;
 }
 
-.list span:hover{
-   border-color:rgb(255,36,66);
-   color: rgb(255,36,66);
-   cursor: pointer;
-   outline: none;
+.list li >label > span:hover{
+  border-color:#0e72ec;
+  color: #0e72ec;
+  cursor: pointer;
+  outline: none;
+}
+
+.verticalLine {
+  font-size: 35px;
+  font-weight: 100;
+  position: relative; top: 5px;
+  color: rgb(213, 213, 213);
 }
