--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -22,34 +22,56 @@
         </ul>
 
         <ul class="navbar-nav ms-sm-auto">
-            <li class="nav-item">
-                <a class="nav-link linkStyleRed" (click)="goNewPost()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
-                  Create Post
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link linkStyleRed" (click)="goAbout()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
-                  About Us
-                </a>
-            </li>
-            <li class="nav-item">
-              <div *ngIf="loggedIn" class="signInIcon">
-                  <a class="nav-link" (click)="goProfile()">
-                    <img id="userIcon"
-                         [src]="profileImage"
-                         height="30px" width="30px"
-                         alt="Icon"
-                         title="See your profile"
-                         data-bs-toggle="collapse"
-                         data-bs-target=".navbar-collapse.show">
-                  </a>
+          <li *ngIf="loggedIn" class="nav-item">
+            <a class="nav-link linkStyleRed" (click)="ToggleNotifications()" data-bs-target=".navbar-collapse.show">
+              <span>
+                <fa-icon [icon]="faBell"
+                         [title]="notifications.length > 0 ? 'You have ' + notifications.length + ' new notifications' : 'You have no new notifications'">
+                </fa-icon>
+              </span>
+              <span class="badge" style="color: #000">{{ notifications.length > 0 ? notifications.length : '' }}</span>
+            </a>
+            <div [ngClass]="showNotificationPanel ? 'displayed' : 'hidden'" class="notification-panel-overlay" (click)="ToggleNotifications()"></div>
+            <div [ngClass]="showNotificationPanel ? 'displayed' : 'hidden'" class="notification-panel">
+              <div class="panel-button">
+                <a (click)="notifications = []" title="Clear all"><fa-icon [icon]="faTrashCan"></fa-icon></a>
+                <a (click)="ToggleNotifications()" title="Close"><fa-icon [icon]="faXmarkCircle"></fa-icon></a>
               </div>
-              <div *ngIf="!loggedIn" class="signOutIcon">
-                  <a class="btn btn-light action-button linkStyleRed signIn" role="button" (click)="goLogin()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
-                    Sign In
-                  </a>
+              <div *ngIf="notifications.length === 0" class="notification-caught-up" style="font-size: 28px;"><fa-icon [icon]="faSmileWink"></fa-icon></div>
+              <div *ngIf="notifications.length === 0" class="notification-caught-up">All caught up!</div>
+              <div *ngFor="let notification of notifications" class="notification-item">
+                {{ generateNotificationContent(notification) }}
               </div>
-            </li>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link linkStyleRed" (click)="goNewPost()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
+              Create Post
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link linkStyleRed" (click)="goAbout()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
+              About Us
+            </a>
+          </li>
+          <li class="nav-item">
+            <div *ngIf="loggedIn" class="signInIcon">
+              <a class="nav-link" (click)="goProfile()">
+                <img id="userIcon"
+                     [src]="profileImage"
+                     height="30px" width="30px"
+                     alt="Icon"
+                     title="See your profile"
+                     data-bs-toggle="collapse"
+                     data-bs-target=".navbar-collapse.show">
+                </a>
+            </div>
+            <div *ngIf="!loggedIn" class="signOutIcon">
+              <a class="btn btn-light action-button linkStyleRed signIn" role="button" (click)="goLogin()" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
+                Sign In
+              </a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
