--- a/src/app/modules/pages/profile_page/ProfilePage.component.css
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.css
@@ -158,3 +158,63 @@ a {
   width: 100%;
   aspect-ratio: 1/2.5;
 }
+
+.subpanel {
+  width: 90vw;
+  height: 80vh;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  position: fixed;
+  background-color: #fff;
+  z-index: 1;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.close-button {
+  text-align: right;
+  font-size: 28px;
+  margin-right: 10px;
+  margin-top: 10px;
+  transition: 0.2s;
+}
+
+.close-button a {
+  cursor: pointer;
+}
+
+.close-button a:hover {
+  color: salmon;
+  transition: 0.2s;
+}
+
+.subpanel-section {
+  margin: 10px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.subpanel-item {
+  margin: 10px;
+  font-size: 18px;
+}
+
+.follow-button {
+  display: flex;
+  justify-content: center;
+  column-gap: 10%;
+  align-items: center;
+  font-size: 18px;
+}
+
+.follow-button a {
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.follow-button a:hover {
+  color: salmon;
+  transition: 0.2s;
+}
