Implement delete account

--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -17,6 +17,8 @@
       </a>
       <a (click)="goEditProfile()"><fa-icon [icon]="faPenToSquare" title="Edit"></fa-icon>
       </a>
+      <a (click)="deleteAccount()"><fa-icon [icon]="faTrashCan" title="Delete your account"></fa-icon>
+      </a>
       <a (click)="goHome(); deleteLoginCookie();"><fa-icon [icon]="faArrowAltCircleRight" title="Log Out"></fa-icon>
       </a>
     </div>
